src/test/ui/nll/issue-52213.nll.stderr
error: lifetime may not live long enough
  --> $DIR/issue-52213.rs:8:20
   |
LL | fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
   |                       --  -- lifetime `'b` defined here
   |                       |
   |                       lifetime `'a` defined here
...
LL |         ((u,),) => u,
   |                    ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to previous error

