src/test/ui/nll/issue-52213.rs
// ignore-compare-mode-nll
// revisions: base nll
// [nll]compile-flags: -Zborrowck=mir

fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
    match (&t,) {
        //[base]~^ ERROR cannot infer an appropriate lifetime
        ((u,),) => u,
        //[nll]~^ ERROR lifetime may not live long enough
    }
}

fn main() {
    let x = {
        let y = Box::new((42,));
        transmute_lifetime(&y)
    };

    println!("{}", x);
}
